# GraphPartition

./: CMakeLists.txt  README.md
arxiv/: edge_table  node_table  test_table  train_table  val_table
arxivresult/: metadata
arxivresult/part0/: edge_table  node_table  test_table  train_table  val_table
arxivresult/part1/: edge_table  node_table  test_table  train_table  val_table
arxivresult/part2/: edge_table  node_table  test_table  train_table  val_table
arxivresult/part3/: edge_table  node_table  test_table  train_table  val_table
arxivresult/part4/: edge_table  node_table  test_table  train_table  val_table
arxivresult/part5/: edge_table  node_table  test_table  train_table  val_table
arxivresult/part6/: edge_table  node_table  test_table  train_table  val_table
arxivresult/part7/: edge_table  node_table  test_table  train_table  val_table
arxivresult/part8/: edge_table  node_table  test_table  train_table  val_table
arxivresult/part9/: edge_table  node_table  test_table  train_table  val_table
data/: edge_table  node_table  test_table  train_table
dataresult/: metadata
dataresult/part0/: edge_table  node_table  train_table
dataresult/part1/: edge_table  node_table  val_table
include/: graph.hpp  partition.hpp  utils.hpp
src/: graph.cpp  partition.cpp  utils.cpp
